apps/overleaf/02-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: overleaf
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: overleaf
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6.0
          command: ["mongod", "--replSet", "overleaf", "--bind_ip_all"]
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: data
              mountPath: /data/db
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/mongodb-init-replica-set.js
              subPath: mongodb-init-replica-set.js
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mongo-data
        - name: init-script
          configMap:
            name: mongo-init-script
