apps/overleaf/04-sharelatex.yaml
apiVersion: v1
kind: Service
metadata:
  name: sharelatex
  namespace: overleaf
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: sharelatex
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharelatex
  namespace: overleaf
spec:
  replicas: 1
  strategy:
    type: Recreate # Required because the PVC is RWO
  selector:
    matchLabels:
      app: sharelatex
  template:
    metadata:
      labels:
        app: sharelatex
    spec:
      enableServiceLinks: false
      containers:
        - name: sharelatex
          image: sharelatex/sharelatex
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/lib/overleaf
          livenessProbe:
            httpGet:
              path: /login
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 20
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sharelatex-data
